# smartroute

./: .gitignore  README.md  build_hybrid.sh  exp.sh  final_exp.sh  generate_gt.sh  generate_queries.sh  generate_queries_config.json  search.sh
ACORN/: CMakeLists.txt  exp_acorn.sh  experiments.json  run_acorn.sh
ACORN/demos/: CMakeLists.txt  test_acorn.cpp  test_acorn_in_ung.cpp  utils.cpp
ACORN/faiss/: IndexACORN.cpp  IndexACORN.h
ACORN/tests/: CMakeLists.txt
DataTools/: reapt_query.py
DataTools/idea-selector/: els_router_train.py  els_router_train_complex.py  fast_smart_route_train.py  idea1_RF.py  idea2_RF.py  idea2_RF_old.py  naive_smart_route_train.py
DataTools/other-pic/: ELS_time.py  UNG+intelELS_analyse.py  eda_analysis.py  summary_idea1_statistics_aligned.csv  summary_idea2_statistics_aligned.csv  table23_feature_pre_time.py  table_avg_ELS.py  table_avg_ELS_table_aligned.csv  table_avg_time_with_stats.csv  table_avg_vector_search.py
DataTools/pic-parall/: config_overall_qps.json  run_pipeline.py
DataTools/pic-parall-old/: config_overall_qps.json  run_pipeline.py
DataTools/pic-perquery/: config.json  new_run_pipeline.py  run_pipeline.py
DataTools/process-labels/: change_json_to_txt.py  check_single_label.py  fill_empty_labels.py  gene_A_label_vector.py  gene_B.json  gene_B.sh  gene_B_label_vector.cpp  gene_specific_label_vector.py  recoder_base_labels_by_freq.py
DataTools/process-vector/: check_blank_line.py  merge_experimental_results.py  merge_vector_and_labels.py  process_recall.py  process_time.py  replace_file_name.py  select_one_query.py  select_one_query_max_recall_change.py  select_vector_and_labels_new.py  smooth_add_points_results.py  smooth_add_points_results_some_csv.py  smooth_time_results.py  smooth_time_results_some_csv.py
NaviX/: .gitignore  CMakeLists.txt  README.md  rename_faiss.sh
NaviX/benchs/: bench_6bit_codec.cpp  bench_cppcontrib_sa_decode.cpp  bench_hamming_computer.cpp  bench_heap_replace.cpp  bench_ivf_selector.cpp
NaviX/c_api/: AutoTune_c.cpp  AutoTune_c.h  Clustering_c.cpp  Clustering_c.h  IndexBinary_c.cpp  IndexBinary_c.h  IndexFlat_c.cpp  IndexFlat_c.h  IndexIVFFlat_c.cpp  IndexIVFFlat_c.h  IndexIVF_c.cpp  IndexIVF_c.h  IndexLSH_c.cpp  IndexLSH_c.h  IndexPreTransform_c.cpp  IndexPreTransform_c.h  IndexReplicas_c.cpp  IndexReplicas_c.h  IndexScalarQuantizer_c.cpp  IndexScalarQuantizer_c.h  IndexShards_c.cpp  IndexShards_c.h  Index_c.cpp  Index_c.h  MetaIndexes_c.cpp  MetaIndexes_c.h  VectorTransform_c.cpp  VectorTransform_c.h  clone_index_c.cpp  clone_index_c.h  error_c.h  error_impl.cpp  faiss_c.h  index_factory_c.cpp  index_factory_c.h  index_io_c.cpp  index_io_c.h  macros_impl.h
NaviX/demos/: demo_imi_flat.cpp  demo_imi_pq.cpp  demo_ivfpq_indexing.cpp  demo_nndescent.cpp  demo_residual_quantizer.cpp  demo_sift1M.cpp  demo_weighted_kmeans.cpp
NaviX/faiss_navix/: AutoTune.cpp  AutoTune.h  CMakeLists.txt  Clustering.cpp  Clustering.h  IVFlib.cpp  IVFlib.h  Index.cpp  Index.h  Index2Layer.cpp  Index2Layer.h  IndexAdditiveQuantizer.cpp  IndexAdditiveQuantizer.h  IndexAdditiveQuantizerFastScan.cpp  IndexAdditiveQuantizerFastScan.h  IndexBinary.cpp  IndexBinary.h  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryFromFloat.cpp  IndexBinaryFromFloat.h  IndexBinaryHNSW.cpp  IndexBinaryHNSW.h  IndexBinaryHash.cpp  IndexBinaryHash.h  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexFastScan.cpp  IndexFastScan.h  IndexFlat.cpp  IndexFlat.h  IndexFlatCodes.cpp  IndexFlatCodes.h  IndexHNSW.cpp  IndexHNSW.h  IndexIDMap.cpp  IndexIDMap.h  IndexIVF.cpp  IndexIVF.h  IndexIVFAdditiveQuantizer.cpp  (+57 more)
NaviX/perf_tests/: CMakeLists.txt  bench_no_multithreading_rcq_search.cpp  bench_scalar_quantizer_accuracy.cpp  bench_scalar_quantizer_decode.cpp  bench_scalar_quantizer_distance.cpp  bench_scalar_quantizer_encode.cpp  utils.cpp  utils.h
NaviX/tests/: test_NSG_compressed_graph.cpp  test_RCQ_cropping.cpp  test_approx_topk.cpp  test_binary_flat.cpp  test_callback.cpp  test_code_distance.cpp  test_common_ivf_empty_index.cpp  test_cppcontrib_sa_decode.cpp  test_cppcontrib_uintreader.cpp  test_dealloc_invlists.cpp  test_disable_pq_sdc_tables.cpp  test_distances_simd.cpp  test_factory_tools.cpp  test_fastscan_perf.cpp  test_hamming.cpp  test_heap.cpp  test_hnsw.cpp  test_ivf_index.cpp  test_ivfpq_codec.cpp  test_ivfpq_indexing.cpp  test_lowlevel_ivf.cpp  test_mem_leak.cpp  test_merge.cpp  test_mmap.cpp  test_omp_threads.cpp  test_ondisk_ivf.cpp  test_pairs_decoding.cpp  test_params_override.cpp  test_partitioning.cpp  test_pq_encoding.cpp  test_simdlib.cpp  test_sliding_ivf.cpp  test_threaded_index.cpp  test_transfer_invlists.cpp  test_util.h  test_utils.cpp  test_zerocopy.cpp
UNG/codes/: CMakeLists.txt
UNG/codes/apps/: CMakeLists.txt  analyze_data.cpp  build_UNG_index.cpp  build_navix_index.cpp  filtered_scan.cpp  search_UNG_index.cpp
UNG/codes/include/: MethodSelector.h  config.h  distance.h  filtered_scan.h  label_nav_graph.h  search_cache.h  storage.h  trie.h  uni_nav_graph.h  utils.h
UNG/codes/src/: CMakeLists.txt  MethodSelector.cpp  distance.cpp  filtered_scan.cpp  storage.cpp  trie.cpp  uni_nav_graph.cpp  utils.cpp
UNG/codes/test/: CMakeLists.txt  test_build_vamana.cpp  test_search_vamana.cpp
UNG/codes/tools/: CMakeLists.txt  compute_groundtruth.cpp  fvecs_to_bin.cpp  generate_base_labels.cpp  generate_mixed_queries.cpp  generate_query_labels.cpp
UNG/codes/vamana/: CMakeLists.txt  vamana.cpp  vamana.h
UNG/data/: average_query_details.py  check_base_label.py
experiment_json/: experiments-Genome-FastSmartRoute-test.json  experiments-Laion-ACORN-big.json  experiments-Reviews-FastSmartRoute+.json  experiments-Reviews-FastSmartRoute-1000-2.json  experiments-VariousImg-ACORN-big.json
experiment_json/202603-FastSmartRoute-small-efs/: experiments-Amazon-FastSmartRoute-1000-2.json  experiments-BookReviews-FastSmartRoute-1000-2.json  experiments-Genome-FastSmartRoute-1000-2.json  experiments-Laion-FastSmartRoute-1000-2.json  experiments-Music-FastSmartRoute-1000-2.json  experiments-Reviews-FastSmartRoute-1000-2.json  (+2 more)
(+359 files in other folders)
