# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

# add_executable(build_UNG_index build_UNG_index.cpp)
# target_link_libraries(build_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss)

# add_executable(search_UNG_index search_UNG_index.cpp)
# target_link_libraries(search_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss)

# add_executable(filtered_scan filtered_scan.cpp)
# target_link_libraries(filtered_scan ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss)

# add_executable(analyze_data analyze_data.cpp)
# target_link_libraries(analyze_data ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

add_executable(build_UNG_index build_UNG_index.cpp)
target_link_libraries(build_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)

add_executable(search_UNG_index search_UNG_index.cpp)
target_link_libraries(search_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)

add_executable(filtered_scan filtered_scan.cpp)
target_link_libraries(filtered_scan ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)

add_executable(analyze_data analyze_data.cpp)
target_link_libraries(analyze_data ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)

add_executable(build_navix_index build_navix_index.cpp)
target_link_libraries(build_navix_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)